--- a/packages/client/src/style.css
+++ b/packages/client/src/style.css
@@ -37,6 +37,7 @@ h1 {
 
 #app {
   max-width: 1280px;
+  min-height: calc(100vh - 4rem);
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
